--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,6 +12,8 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
 
     steps:
+    - name: git-bash
+    - uses: fnkr/github-action-git-bash@v1.1
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
