--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
-      run: sudo apt-get install dh-autoreconf libcurl4-gnutls-dev libexpat1-dev \ gettext libz-dev libssl-dev
+      run: sudo apt install git-all
