--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -12,4 +12,7 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
-      run: sudo apt install git-all
+      run: apt-get install git
+           add-apt-repository ppa:git-core/ppa
+           apt update; apt install git
+           
