--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
-      run: apt-get install git
+      run: sudo apt-get install git
            add-apt-repository ppa:git-core/ppa
            apt update; apt install git
            
