--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - sudo apt install curl
-      - sudo apt install yarn
-      - yarn --version 
+      apt install curl
+      sudo apt install yarn
+      yarn --version
