--- a/.github/workflows/compiler.yml
+++ b/.github/workflows/compiler.yml
@@ -12,8 +12,7 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
-      run: 
-    - cd GDLauncher
-    - yarn
-    - yarn dev
-    - yarn start
+      run: cd GDLauncher
+    - run: yarn
+    - run: yarn dev
+    - run: yarn start
