--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - run: apt install curl
-      - run: apt install yarn
+      - run: sudo apt install curl
+      - run: sudo apt install yarn
       - run: yarn --version
