--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,5 @@ jobs:
       - run: sudo apt install curl
       - run: sudo apt install yarn
       - run: yarn --version
+      - run: yarn add eslint --dev
+      - run: yarn add webpack --dev  
