--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,6 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: yarn --version
-      - run: yarn add eslint --dev
-      - run: yarn add webpack --dev
-      - run: sudo apt install python3-distutils -y
-      - run: yarn add redux
-      - run: npm install electron --save-dev
+      - run: eslint --version
+      - run: webpack --version
+      - run: python3 -V
